syntax = "proto3";

option csharp_namespace = "server.api.gRPC.Customer";

package route;

import "google/api/annotations.proto";
import "gRPC/Protos/shared.proto";

service Routes {
	rpc GetRoutes (GetRoutesRequest) returns (GetRoutesReply){
		option (google.api.http) = {
			get: "/api/routes"
		};
	}
}

message GetRoutesRequest {
	optional int32 id = 1;
	optional shared.Pagination p = 2;
}

message GetRoutesReply {
	repeated RouteMessage Routes = 1;
	int32 count = 2;
}

message RouteMessage {
	int32 id = 1;
	int32 MaximumTimeForCompletion = 2;
	int32 StoreId = 3;
}

